[project]
name = "chat-with-pdf-rag"
version = "0.1.0"
description = "Minimal RAG service: upload a PDF, ask questions, get cited answers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",
    "pypdf==5.1.0",
    "sentence-transformers==3.2.1",
    "faiss-cpu==1.9.0",
    "numpy==1.26.4",
    "python-dotenv==1.0.1",
    "groq>=0.25.0",
    "openai==1.54.0",
    "anthropic==0.39.0",
]

[dependency-groups]
# Add dev tools here later (pytest, ruff, mypy, etc): `uv add --dev pytest`
dev = []
